# ferrum-bot

./: Cargo.toml  README.md  config.example.json
.github/workflows/: release.yml
crates/ferrumbot-agent/: Cargo.toml
crates/ferrumbot-agent/src/: context.rs  lib.rs  memory.rs
crates/ferrumbot-agent/src/agent_loop/: constructors.rs  lifecycle.rs  mod.rs  processing.rs
crates/ferrumbot-channels/: Cargo.toml
crates/ferrumbot-channels/src/: base.rs  lib.rs  stub.rs  whatsapp.rs
crates/ferrumbot-channels/src/manager/: build.rs  lifecycle.rs  mod.rs  status.rs
crates/ferrumbot-cli/: Cargo.toml
crates/ferrumbot-cli/src/: app.rs  main.rs
crates/ferrumbot-cli/src/commands/: agent.rs  channels.rs  cron.rs  gateway.rs  mod.rs  onboard.rs  status.rs
crates/ferrumbot-config/: Cargo.toml
crates/ferrumbot-config/src/: lib.rs  paths.rs
crates/ferrumbot-config/src/schema/: agents.rs  channels.rs  config.rs  gateway.rs  mod.rs  providers.rs  tools.rs
crates/ferrumbot-config/src/storage/: io.rs  keys.rs  mod.rs  templates.rs
crates/ferrumbot-core/: Cargo.toml
crates/ferrumbot-core/src/: bus.rs  lib.rs  messages.rs  utils.rs
crates/ferrumbot-core/src/session/: io.rs  manager.rs  mod.rs  model.rs
crates/ferrumbot-cron/: Cargo.toml
crates/ferrumbot-cron/src/: callback.rs  lib.rs  schedule.rs  service.rs  store.rs  time_utils.rs  types.rs
crates/ferrumbot-providers/: Cargo.toml
crates/ferrumbot-providers/src/: lib.rs  provider.rs  types.rs
crates/ferrumbot-providers/src/openai/: build.rs  call.rs  mod.rs  model.rs  parse.rs
crates/ferrumbot-runtime/: Cargo.toml
crates/ferrumbot-runtime/src/: lib.rs  tracing.rs
crates/ferrumbot-runtime/src/gateway/: mod.rs  setup.rs  teardown.rs
crates/ferrumbot-tools/: Cargo.toml
crates/ferrumbot-tools/src/: context.rs  lib.rs  tool.rs
crates/ferrumbot-tools/src/cron/: actions.rs  mod.rs
crates/ferrumbot-tools/src/defaults/: mod.rs  register.rs  tests.rs
crates/ferrumbot-tools/src/exec/: args.rs  guard.rs  mod.rs  run.rs
crates/ferrumbot-tools/src/file/: common.rs  edit.rs  list.rs  mod.rs  read.rs  write.rs
crates/ferrumbot-tools/src/message/: args.rs  mod.rs  send.rs
crates/ferrumbot-tools/src/path/: mod.rs  resolve.rs
crates/ferrumbot-tools/src/registry/: mod.rs  validate.rs
crates/ferrumbot-tools/src/spawn/: args.rs  mod.rs
crates/ferrumbot-tools/src/web/: mod.rs
crates/ferrumbot-tools/src/web/fetch/: args.rs  mod.rs  validate.rs
crates/ferrumbot-tools/src/web/search/: args.rs  mod.rs  render.rs
