[workspace]
members = [
  "crates/ferrumbot-cli",
  "crates/ferrumbot-config",
  "crates/ferrumbot-core",
  "crates/ferrumbot-agent",
  "crates/ferrumbot-tools",
  "crates/ferrumbot-providers",
  "crates/ferrumbot-channels",
  "crates/ferrumbot-cron",
  "crates/ferrumbot-runtime",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
authors = ["lispking"]

[workspace.dependencies]
anyhow = "1"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
cron = "0.15"
dirs = "6"
futures = "0.3"
jsonschema = "0.30"
once_cell = "1"
regex = "1"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "sync", "process", "time", "fs"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
uuid = { version = "1", features = ["v4"] }
