[package]
name = "ferrumbot-agent"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
ferrumbot-config = { path = "../ferrumbot-config" }
ferrumbot-core = { path = "../ferrumbot-core" }
ferrumbot-cron = { path = "../ferrumbot-cron" }
ferrumbot-providers = { path = "../ferrumbot-providers" }
ferrumbot-tools = { path = "../ferrumbot-tools" }
