[package]
name = "ferrumbot-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[[bin]]
name = "ferrum-bot"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
chrono.workspace = true
clap.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
rustyline = "14"
ferrumbot-agent = { path = "../ferrumbot-agent" }
ferrumbot-channels = { path = "../ferrumbot-channels" }
ferrumbot-config = { path = "../ferrumbot-config" }
ferrumbot-core = { path = "../ferrumbot-core" }
ferrumbot-cron = { path = "../ferrumbot-cron" }
ferrumbot-providers = { path = "../ferrumbot-providers" }
ferrumbot-runtime = { path = "../ferrumbot-runtime" }
ferrumbot-tools = { path = "../ferrumbot-tools" }
