[package]
name = "ferrumbot-tools"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
jsonschema.workspace = true
regex.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
ferrumbot-cron = { path = "../ferrumbot-cron" }
ferrumbot-core = { path = "../ferrumbot-core" }
ferrumbot-config = { path = "../ferrumbot-config" }
